cyberthreat widget added

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
     <div id="app" class="container">
         <h1>{{ pageTitle }}</h1>
         <p>{{ content }}</p>
+        <iframe width="640" height="640" src="https://cybermap.kaspersky.com/en/widget/dynamic/dark"
+            frameborder="0"></iframe>
 
     </div>
     <!-- Profile images component -->
